# GJK-web

.github/workflows/: rust.yml
api/: .gitignore  Cargo.toml  README.md  add_blob.py  add_user.py  articles.db  build.rs  config.json  list_articles.py  load_old_posts_json.py  migrate.py  permission_flags.json
api/articles-scraper/: index.js  package-lock.json  package.json
api/doc/: auth.md
api/doc/endpoints/: root.md  supl.md
api/doc/endpoints/admin/: delete_user.md  modify_user.md  new_user.md  users.md
api/doc/endpoints/article/: articles.md  blob_get.md  blob_new.md  delete.md  edit.md  get.md  new.md
api/doc/endpoints/auth/: logout.md  logout_all.md  me.md  oauth.md  redirect.md
api/doc/scripts/: add_blob.py.md  add_user.py.md  list_articles.py.md  load_old_posts_json.py.md  migrate.py.md
api/migrations/: article_add_author_email.migration  user_name.migration
api/src/: config.rs  dates.rs  main.rs  permissions_middleware.rs  user_data_middleware.rs
api/src/article/: article.rs  db.rs  imagedb.rs  mod.rs
api/src/auth/: config.rs  mod.rs  oauth.rs  token_storage.rs  userdb.rs
api/src/calendar/: cache.rs  event.rs  fetcher.rs  mod.rs  response.rs
api/src/routes/: mod.rs  permissions_info.rs  root.rs
api/src/routes/admin/: delete_user.rs  mod.rs  modify_user.rs  new_user.rs  users.rs
api/src/routes/article/: articles.rs  blob_get.rs  blob_new.rs  delete.rs  edit.rs  get.rs  mod.rs  new.rs
api/src/routes/auth/: logout.rs  logout_all.rs  me.rs  mod.rs
api/src/routes/calendar/: events.rs
api/src/structs/: mod.rs  permission_flags_info.rs
api/src/suplovani/: archive.rs  html_table.rs  mod.rs  supl.rs  supl_driver.rs
frontend/: .eslintrc.cjs  components.json  config.json  middleware.ts  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/app/(main)/: layout.tsx  page.module.css  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: Button.module.css  Button.tsx  Footer.module.css  Footer.tsx  Navbar.module.css  Navbar.tsx  footer.tsx  navbar.tsx
frontend/components/dashboard/: article-actions.tsx  article-editor.tsx  sidebar.tsx  text-editor.tsx
frontend/components/ui/: navigation-menu.tsx
frontend/lib/: actions.ts  dal.ts  definitions.ts  session.ts  types.ts  utils.ts
frontend/pages-from-google-docs/: index.js
(+8 files in other folders)
