[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
chrono = "0.4.31"
dotenv = "0.15.0"
http = "1.0.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"
phf = { version = "0.11", features = ["macros"] }
rand = { version = "0.8.5", features = ["std_rng"] }
regex = "1.10.2"
reqwest = { version = "0.11.23", features = ["blocking"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha = "1.0.3"
rusqlite = "0.30.0"
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[build-dependencies]
phf = { version = "0.11.1", default-features = false }
phf_codegen = "0.11.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
